FileResource fixe bug on windows file path.